# ckelinar

./: BasicDataTypes.h  CMakeLists.txt  Doxyfile  EarthTrajectory.cpp  EarthTrajectory.h  MapViewer.cpp  MapViewer.h  TrajectoryForecaster.cpp  TrajectoryForecaster.h  main.cpp
computer/: BasicDataTypes.h  CMakeLists.txt  EarthTrajectory.cpp  Ground.cpp  Ground.h  MainWindow.cpp  MainWindow.h  MapViewer.cpp  MapViewer.h  SimpleSerial.h  SondeViewer.cpp  SondeViewer.h  TrajectoryForecaster.cpp  TrajectoryForecaster.h  main.cpp
computer/weblog/: CMakeLists.txt  weblog.cpp
sonde/clean/: Makefile
sonde/clear/: Makefile  cleaner.pde
sonde/receiver/: receiver.pde
sonde/transmitter/: DataInterface.cpp  DataInterface.h  GPSReader.cpp  GPSReader.h  Makefile  PortDefinitions.h  transmitter.pde
